Update to use PostgreSQL and prepare for Render deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,29 @@ services:
     ports:
       - "8000:8000"
     environment:
+      - DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/tasks
       - REDIS_URL=redis://redis:6379
-    volumes:
-      - ./tasks.db:/app/tasks.db
     depends_on:
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
+
+  db:
+    image: postgres:15
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=tasks
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   redis:
     image: redis:latest
@@ -20,4 +38,5 @@ services:
       - redis_data:/data
 
 volumes:
+  postgres_data:
   redis_data:
