--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ fastapi==0.104.1
 uvicorn==0.24.0
 pydantic==2.4.2
 sqlalchemy==2.0.38
-aiosqlite==0.21.0
+psycopg2-binary==2.9.9
+asyncpg==0.29.0
 typing-extensions>=4.6.0
 greenlet>=2.0.0
 redis==5.0.1
+python-dotenv==1.0.0
