--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromService:
-          type: postgres
+          type: pserv
           name: task-api-db
           property: connectionString
       - key: REDIS_URL
@@ -17,7 +17,7 @@ services:
           name: task-api-cache
           property: connectionString
 
-  - type: postgres
+  - type: pserv
     name: task-api-db
     ipAllowList: []
     plan: free
