--- a/render.yaml
+++ b/render.yaml
@@ -6,21 +6,13 @@ services:
     plan: free
     healthCheckPath: /docs
     envVars:
-      - key: DATABASE_URL
-        fromService:
-          type: pserv
-          name: task-api-db
-          property: connectionString
       - key: REDIS_URL
         fromService:
           type: redis
           name: task-api-cache
           property: connectionString
-
-  - type: pserv
-    name: task-api-db
-    ipAllowList: []
-    plan: free
+      - key: DATABASE_URL
+        sync: false # Will be set manually after creating the database
 
   - type: redis
     name: task-api-cache
